<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageButton
        android:id="@+id/play_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        tools:src="@drawable/ic_play_arrow_black_24dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_play_button" />

    <SeekBar
        android:id="@+id/volume_seekbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:max="100"
        app:layout_constraintLeft_toRightOf="@id/volume_imageview"
        app:layout_constraintRight_toLeftOf="@id/play_toggle_button"
        app:layout_constraintTop_toTopOf="@id/play_toggle_button"
        app:layout_constraintBottom_toBottomOf="@id/play_toggle_button"/>

    <ImageView
        android:id="@+id/volume_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_volume_up_black_24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/play_toggle_button"
        app:layout_constraintBottom_toBottomOf="@id/play_toggle_button"
        android:contentDescription="@string/description_volume" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/play_toggle_button"
        app:layout_constraintBottom_toBottomOf="@id/play_toggle_button"
        android:background="@color/colorDivider"/>
    
    <TextView
        android:id="@+id/waveform_header_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/waveform_header_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/play_toggle_button" />

    <Spinner
        android:id="@+id/waveform_spinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:entries="@array/waveform_names"
        app:layout_constraintBottom_toBottomOf="@id/frequency_edittext"
        app:layout_constraintLeft_toLeftOf="@id/waveform_header_textview"
        app:layout_constraintRight_toRightOf="@id/waveform_header_textview"
        app:layout_constraintTop_toTopOf="@id/frequency_edittext" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/colorDivider"
        app:layout_constraintLeft_toRightOf="@id/waveform_header_textview"
        app:layout_constraintRight_toLeftOf="@id/frequency_header_textview"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintBottom_toBottomOf="@id/frequency_hz_decrement"
        />

    <TextView
        android:id="@+id/frequency_header_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/frequency_header_text"
        app:layout_constraintLeft_toLeftOf="@id/frequency_edittext"
        app:layout_constraintRight_toRightOf="@id/frequency_hz_increment"
        app:layout_constraintTop_toBottomOf="@id/play_toggle_button" />

    <EditText
        android:id="@+id/frequency_edittext"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@id/frequency_hz_decrement"
        app:layout_constraintTop_toTopOf="@id/frequency_hz_increment"
        app:layout_constraintLeft_toRightOf="@id/waveform_spinner"
        tools:text="440.00" />

    <TextView
        android:id="@+id/hz_textview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/hz"
        app:layout_constraintBottom_toBottomOf="@id/frequency_hz_decrement"
        app:layout_constraintRight_toLeftOf="@+id/frequency_hz_increment"
        app:layout_constraintLeft_toRightOf="@id/frequency_edittext"
        app:layout_constraintTop_toTopOf="@id/frequency_hz_increment" />

    <ImageButton
        android:id="@+id/frequency_hz_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/description_increment_frequency_in_hz"
        android:src="@drawable/ic_add_white_18dp"
        app:layout_constraintEnd_toStartOf="@+id/pitch_spinner"
        app:layout_constraintTop_toBottomOf="@id/frequency_header_textview" />

    <ImageButton
        android:id="@+id/frequency_hz_decrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_decrement_frequency_in_hz"
        android:src="@drawable/ic_remove_white_18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/frequency_hz_increment"
        app:layout_constraintRight_toRightOf="@id/frequency_hz_increment"
        app:layout_constraintTop_toBottomOf="@id/frequency_hz_increment" />

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/colorDivider"
        app:layout_constraintLeft_toRightOf="@id/frequency_header_textview"
        app:layout_constraintRight_toLeftOf="@id/pitch_header_textview"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintBottom_toBottomOf="@id/frequency_hz_decrement" />
    
    <TextView
        android:id="@+id/pitch_header_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pitch_header_text"
        app:layout_constraintLeft_toLeftOf="@id/pitch_spinner"
        app:layout_constraintRight_toRightOf="@id/pitch_increment"
        app:layout_constraintTop_toBottomOf="@id/play_toggle_button" />

    <Spinner
        android:id="@+id/pitch_spinner"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:entries="@array/pitch_names"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@id/pitch_decrement"
        app:layout_constraintRight_toLeftOf="@id/cents_textview"
        app:layout_constraintTop_toTopOf="@id/pitch_increment" />

    <TextView
        android:id="@+id/cents_textview"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        tools:text="± 0 cents"
        app:layout_constraintBottom_toBottomOf="@id/pitch_spinner"
        app:layout_constraintRight_toLeftOf="@+id/pitch_increment"
        app:layout_constraintTop_toTopOf="@id/pitch_spinner" />

    <ImageButton
        android:id="@+id/pitch_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/description_increment_pitch"
        android:src="@drawable/ic_add_white_18dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pitch_header_textview" />

    <ImageButton
        android:id="@+id/pitch_decrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_decrement_pitch"
        android:src="@drawable/ic_remove_white_18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/pitch_increment"
        app:layout_constraintRight_toRightOf="@id/pitch_increment"
        app:layout_constraintTop_toBottomOf="@id/pitch_increment" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivider"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>